--- a/src/bin/p1.md
+++ b/src/bin/p1.md
@@ -3,17 +3,21 @@
 
 ### level one 
 
-- First of all we need to setup the structs 
-    - Bill
-    - Bills with a vec of bills 
+- First of all, we need to set the structs 
+    - [ ] Bill
+    - [ ] Bills with a vec of bills 
 
-- After that we need to implement a few functions 
-    - New that returns a inner vec
-    - add that does inner push 
-    - get_all that returns a reference of a Vec of Bill 
+- After that, we need to implement a few functions 
+    - [ ] `new` that returns an inner vec of `Self`
+    - [ ] `add` that receives a mutable of `self` and does an inner push 
+    - [ ] `get_all` that returns a reference of a Vec of Bill
+        - [ ] Create an empty `bills` as Vec
+        - [ ] run a for to iterate over the `self.inner` which is a `Vec` and only looks for the `values`
+            - [ ] push the `bill` into the vec `bills`
+        - [ ] Return the vec `bills`
 
-- we need a func to get the user input 
-    - dont forget to trim and change to a String
+- we need a function to get the user input 
+    - don't forget to trim and change to a String
 
 - we need a main menu function to show the options
     - it will contain a inner show function 
