--- a/src/bin/p1.md
+++ b/src/bin/p1.md
@@ -2,24 +2,18 @@
 
 
 ### level one 
-<input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
-<label for="vehicle1"> I have a bike</label><br>
-<input type="checkbox" id="vehicle2" name="vehicle2" value="Car">
-<label for="vehicle2"> I have a car</label><br>
-<input type="checkbox" id="vehicle3" name="vehicle3" value="Boat">
-<label for="vehicle3"> I have a boat</label><br>
 - First of all, we need to set the structs 
-    - [ ] Bill
-    - [ ] Bills with a vec of bills 
+    - Bill
+    - Bills with a vec of bills 
 
 - After that, we need to implement a few functions 
-    - [ ] `new` that returns an inner vec of `Self`
-    - [ ] `add` that receives a mutable of `self` and does an inner push 
-    - [ ] `get_all` that returns a reference of a Vec of Bill
-        - [ ] Create an empty `bills` as Vec
-        - [ ] run a for to iterate over the `self.inner` which is a `Vec` and only looks for the `values`
-            - [ ] push the `bill` into the vec `bills`
-        - [ ] Return the vec `bills`
+    - `new` that returns an inner vec of `Self`
+    - `add` that receives a mutable of `self` and does an inner push 
+    - `get_all` that returns a Vec of Bill reference
+        - Create an empty `bills` as Vec
+        - run a for to iterate over the `self.inner` which is a `Vec` and only looks for the `values`
+            - push the `bill` into the vec `bills`
+        - Return the vec `bills`
 
 - we need a function to get the user input 
     - don't forget to trim and change to a String
