--- a/src/bin/p1.md
+++ b/src/bin/p1.md
@@ -9,11 +9,8 @@
 - After that, we need to implement a few functions 
     - `new` that returns an inner vec of `Self`
     - `add` that receives a mutable of `self` and does an inner push 
-    - `get_all` that returns a Vec of Bill reference
-        - Create an empty `bills` as Vec
-        - run a for to iterate over the `self.inner` which is a `Vec` and only looks for the `values`
-            - push the `bill` into the vec `bills`
-        - Return the vec `bills`
+    - `get_all` that returns a reference Vec of Bill
+        - Return `self inner`
 
 - we need a function to get the user input 
     - don't forget to trim and change to a String
