--- a/src/bin/p1.md
+++ b/src/bin/p1.md
@@ -12,40 +12,46 @@
     - `get_all` that returns a reference Vec of Bill
         - Return `self inner`
 
-- we need a function to get the user input 
-    - don't forget to trim and change to a String
+- we need a function to get the user input that returns a `String`
+    - Create an empty input String
+    - Use a `while` with the `io` and the function `is_err()`
+        - print a message "enter your data again"
+    - return the `buffer` removing the empty spaces
 
 - we need a main menu function to show the options
-    - it will contain a inner show function 
+    - it will contain an inner show function 
         - 1 add bill 
         - 2 vier bill 
         - enter selection
-    - create a new mutable bills (use the add implementation)
-    - loop to keep the code running 
+    - create new mutable bills (use the `add` implementation)
+    - run a `loop` to keep the code running 
         - run the show with the options
         - get the user input
-        - match over the user input and cover the options
+        - match over the user `input` (make sure to convert to `str`) and cover the options
         - 1 : add bill menu 
         - 2 : view bill menu 
 
-- Create add bill menu 
-    - it needs to receive a mutable of bills 
+- Create `add_bill_menu`
+    - it needs to receive a mutable of bills
+        - print a message asking for the name
         - get the bill name 
         - get the bill amount 
-            - it requires a new function that returns a f64
-               - print a message to the user askingin the amount 
+            - it requires a new function `get_amount` that returns an `f64`
+               - print a message to the user asking the amount 
                 - start a loop 
                     - get the user input using the existing func
-                    - parse the input as Result<f64, _>
-                    - match over the input and threat the Ok and the Error
-        - set a bill passing the valued we got       
-        - calls the add method we created before
+                    - create a new `parsed_input` as type `Result<f64, _>` from `input.parse()`
+                    - match over the input and treat the
+                        - Ok: returning the amount
+                        - Err - just printing a message
+        - create a new variable `bill` and set passing the values we got       
+        - now we can call the `new` method implemented on `Bills` passing the variable `bill`
         - print a message that the bill was added
-- Create a view bills menu function that receives a reference to Bills 
+- Create a `view_bills_menu` function that receives a reference to Bills 
     - iterate over the bills using the function get_all
         - print the bill
     
-- On main func call the main menu 
+- On the main function call the main menu 
 
 
 ### ending level one project
