--- a/src/bin/p1.md
+++ b/src/bin/p1.md
@@ -7,7 +7,7 @@
     - Bills with a vec of bills 
 
 - After that, we need to implement a few functions 
-    - `new` that returns an inner vec of `Self`
+    - `new` that returns `Self`. Inside the func returns an inner vec of `Self`
     - `add` that receives a mutable of `self` and does an inner push 
     - `get_all` that returns a reference Vec of Bill
         - Return `self inner`
