--- a/src/bin/p1.md
+++ b/src/bin/p1.md
@@ -9,7 +9,7 @@
 - After that, we need to implement a few functions 
     - `new` that returns `Self`. Inside the func returns an inner vec of `Self`
     - `add` that receives a mutable of `self` and does an inner push 
-    - `get_all` that receives `&self` :w
+    - `get_all` that receives `&self` and returns a reference of `Vec<Bill>`
     - that returns a reference Vec of Bill
         - Return `self inner`
 
