--- a/src/bin/p1.md
+++ b/src/bin/p1.md
@@ -55,8 +55,6 @@
 - On the main function call the main menu 
 
 
-### ending level one project
-
 
 ### level two project 
 
@@ -87,13 +85,11 @@
     - run a if statement using the bills calling the method `remove`
         - If true print out a message `removed`
         - if false print `bill not found`
-- Add the new remove option into the main menu
+- Add the new `remove` option into the main menu
 
 
-### ending level two project
 
-
-### level three project 
+### Level three project 
 - Create a new function update_bill_menu it will be pretty similar to remove function
     - Show all the bills
     - ask for the name to update
@@ -111,16 +107,16 @@
             * Some bill 
                 - change the bill.amount to the new amount
                 - return true
-            * None , just return false
+            * None, just return false
 
     - get the amount using the func get_amount and assigning to a variable
-    - run a if statement using the bills calling the method `update`
+    - run an if statement using the bills calling the method `update`
         - If true print out a message `updated`
         - if false print `bill not found`
-    - Add the new `update` option into the main menu
+    - Add the new `update` option to the main menu
 
-- we need to give the user a hability to return to main menu
-    - on `get_input` function change the return to be a `Option` of `String`
+- we need to give the user ability to return to the main menu
+    - on `get_input` function change the return to be an `Option` of `String`
     - assign the buffer to a variable
     - run a if statement checking if the `&input` variable is equal to ""
         - return `None`
