--- a/src/bin/p1.md
+++ b/src/bin/p1.md
@@ -1,5 +1,21 @@
-# project one tips 
+# Project 1: Interactive bill manager
 
+## User stories:
+* L1: I want to add bills, including the name and amount owed.
+* L1: I want to view existing bills.
+* L2: I want to remove bills.
+* L3: I want to edit existing bills.
+* L3: I want to go back if I change my mind.
+
+## Tips:
+* Use the loop keyword to create an interactive menu.
+* Each menu choice should have its own function, so you can work on the functionality for that menu in isolation.
+* A vector is the easiest way to store the bills at level 1, but a hashmap will be easier to work with at levels 2 and 3.
+* Create a function just for retrieving user input and reuse it throughout your program.
+* Create your program starting at level 1. Once finished, advance to the next level.
+
+
+# Projetc tips
 
 ### level one 
 - First of all, we need to set the structs 
@@ -29,8 +45,8 @@
         - run the show with the options
         - get the user input
         - match over the user `input` (make sure to convert to `str`) and cover the options
-        - 1 : add bill menu 
-        - 2 : view bill menu 
+        - 1: add bill menu 
+        - 2: view bill menu 
 
 - Create `add_bill_menu`
     - it needs to receive a mutable of bills
